# UniMind

./: .dockerignore  .env.template  .gitignore  ANDROID_REDESIGN_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  BALANCE_QUERY_MERGE_REPORT.md  BENEFITS_INTEGRATION_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPETITION_COMPLIANCE_REPORT.md  DATA_USAGE_QUERY_IMPLEMENTATION_REPORT.md  DATA_USAGE_QUERY_USAGE_GUIDE.md  DEPLOYMENT.md  Dockerfile  EXECUTION_FLOW_GUIDE.md  FINAL_DATA_USAGE_IMPLEMENTATION_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_SYSTEM_DEMONSTRATION.md  FINAL_VERIFICATION_CHECKLIST.md  INTEGRATION_SUCCESS_SUMMARY.md  INTERACTIVE_BENEFITS_INTEGRATION_GUIDE.md  MAIN_UI_INTEGRATION_COMPLETE.md  PHONE_AUTO_ANSWER_DESIGN.md  PHONE_AUTO_ANSWER_FINAL_SUMMARY.md  PHONE_AUTO_ANSWER_IMPLEMENTATION_REPORT.md  PHONE_AUTO_ANSWER_INTEGRATION_GUIDE.md  QUICK_START.md  README.md  REAL_PHONE_AUTO_ANSWER_GUIDE.md  REAL_PHONE_CALL_IMPLEMENTATION_PLAN.md  SMART_AUTO_ANSWER_FINAL_IMPLEMENTATION_SUMMARY.md  SMART_AUTO_ANSWER_USAGE_GUIDE.md  USER_BENEFITS_CLAIM_GUIDE.md  accurate_auto_answer.py  agilemind_smart_answer.py  app.py  batch_claim_coupons.py  config.yaml  config_unicom_android.yaml  debug_adb_operations.py  (+66 more)
agilemind/: __init__.py  agile.py  fixed.py  main.py  unicom_mobile_android.py  universal_ai_assistant.py  waterfall.py
agilemind/checker/: __init__.py  attribute_checker.py  checker_pipeline.py  import_checker.py  pylint_checker.py  static_checking.py  syntax_checker.py
agilemind/context/: context.py
agilemind/execution/: __init__.py  agent.py  config.py  executor.py  runner.py
agilemind/pipeline/: pipeline.py
agilemind/prompt/: __init__.py  agile.py  universal_assistant_prompts.py  waterfall.py
agilemind/stage/: __init__.py  stages.py
agilemind/task/: __init__.py  definition.py  tasks.py
src/: chat.py  main.py  pipeline.py  prompt.py
unimind/: unicom_mobile_android.py
(+58 files in other folders)
